# OpenBay

./: .gitignore  README.md  pyproject.toml
docs/: PLAN.md  ROADMAP.md
openbay/: __init__.py
openbay/client/: __main__.py  cli.py
openbay/common/: models.py
openbay/coordinator/: __main__.py  app.py  ledger.py
openbay/seeder/: __main__.py  worker.py
openbay/worker/: __main__.py  worker.py
scripts/: demo.md
tests/: test_smoke.py
